--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
           git config --global user.email "${{ secrets.CI_COMMIT_EMAIL }}"
           git pull
           git tag "v${{ inputs.versionNumber }}"
-          git push
+          git push origin "v${{ inputs.versionNumber }}"
   terraform-provider-release:
     name: 'Terraform Provider Release'
     needs: [go-version, release-tag]
