--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,11 +37,6 @@ jobs:
           args: batch ${{ inputs.versionNumber }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Upload release notes
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-notes
-          path: .changes/${{ inputs.versionNumber }}.md
       - name: Merge changes
         uses: miniscruff/changie-action@v0
         with:
@@ -53,6 +48,7 @@ jobs:
         run: |
           git config --global user.name "${{ secrets.CI_COMMIT_AUTHOR }}"
           git config --global user.email "${{ secrets.CI_COMMIT_EMAIL }}"
+          git add .
           git commit -a -m "Update changelog"
           git push
   release-tag:
@@ -70,12 +66,25 @@ jobs:
           git pull
           git tag "v${{ inputs.versionNumber }}"
           git push origin "v${{ inputs.versionNumber }}"
+  release-notes:
+    needs: [ changelog, release-tag ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: v${{ inputs.versionNumber }}
+          fetch-depth: 0
+      - uses: actions/upload-artifact@v3
+        with:
+          name: release-notes
+          path: .changes/${{ inputs.versionNumber }}.md
   terraform-provider-release:
     name: 'Terraform Provider Release'
     needs: [go-version, release-tag]
-    uses: hashicorp/ghaction-terraform-provider-release/.github/workflows/community.yml@v2
+    uses: ./.github/workflows/community.yml
     secrets:
       gpg-private-key: '${{ secrets.GPG_PRIVATE_KEY }}'
     with:
       release-notes: true
       setup-go-version: '${{ needs.go-version.outputs.version }}'
+      git-ref: 'v${{ inputs.versionNumber }}'
