add parameters for set-changelog-version job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,11 @@ permissions:
 
 jobs:
   set-changelog-version:
-    run: |
-      echo "changelogVersion = $(echo ${{ inputs.versionNumber }} | cut -c 2-)" >> $GITHUB_ENV
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set Value
+      - run: |
+        echo "changelogVersion = $(echo ${{ inputs.versionNumber }} | cut -c 2-)" >> $GITHUB_ENV
   go-version:
     runs-on: ubuntu-latest
     outputs:
