--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
     outputs:
       version: ${{ steps.go-version.outputs.version }}
     steps:
+      - uses: actions/checkout@v3
       - id: go-version
         run: echo "version=$(cat ./.go-version)" >> $GITHUB_OUTPUT
   changelog:
