--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,10 @@ on:
         type: string
         required: true
 
-# Releases need permissions to read and write the repository contents.
-# GitHub considers creating releases and uploading assets as writing contents.
+env:
+  CI_COMMIT_AUTHOR: SBGoods
+  CI_COMMIT_EMAIL: email@example.com
+
 permissions:
   contents: write
 
@@ -54,8 +56,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Git push changelog
         run: |
-          git config --global user.name "${{ secrets.CI_COMMIT_AUTHOR }}"
-          git config --global user.email "${{ secrets.CI_COMMIT_EMAIL }}"
+          git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+          git config --global user.email "${{ env.CI_COMMIT_EMAIL }}"
           git add .
           git commit -a -m "Update changelog"
           git push
@@ -69,8 +71,8 @@ jobs:
           fetch-depth: 0
       - name: Git push release tag
         run: |
-          git config --global user.name "${{ secrets.CI_COMMIT_AUTHOR }}"
-          git config --global user.email "${{ secrets.CI_COMMIT_EMAIL }}"
+          git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+          git config --global user.email "${{ env.CI_COMMIT_EMAIL }}"
           git pull
           git tag "${{ inputs.versionNumber }}"
           git push origin "${{ inputs.versionNumber }}"
