--- a/.changie.yaml
+++ b/.changie.yaml
@@ -4,9 +4,10 @@ changelogPath: CHANGELOG.md
 versionExt: md
 versionFormat: '## {{.Version}} ({{.Time.Format "January 02, 2006"}})'
 kindFormat: '{{.Kind}}:'
-changeFormat: '* {{.Body}} [#{{.Custom.Issue}}](https://github.com/SBGoods/terraform-provider-releasetest/issues/{{.Custom.Issue}})'
+changeFormat: '* {{.Body}} ([#{{.Custom.Issue}}](https://github.com/SBGoods/terraform-provider-releasetest/issues/{{.Custom.Issue}}))'
 custom:
   - key: Issue
+    label: Issue/PR Number
     type: int
     minInt: 1
 kinds:
